--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,8 @@
 /*
  * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+ * Все паршалы подключаются сюда.*/
+@import './base';
+ 
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
